lxml changelog
==============

current
=======

Features added
--------------

* Module level `tounicode` function to return XML serialization as Python
  unicode string (equivalent to `tostring` function)

* Parsing a unicode string no longer copies the string (reduced memory
  footprint)

* Parsing file-like objects now reads chunks rather than the whole file
  (reduced memory footprint)

* Parsing StringIO objects from the start avoids copying the string (reduced
  memory footprint)

* Read-only 'docinfo' attribute in ElementTree class holds DOCTYPE
  information, original encoding and XML version as seen by the parser

* etree module can be compiled without libxslt by commenting out the line
  'include "xslt.pxi"' near the end of the etree.pyx source file

* Better error messages in parser exceptions

* Error reporting now also works in XSLT

* Support for custom document loaders (URI resolvers) in parsers and XSLT,
  resolvers are registered at parser level

* Implementation of exslt:regexp for XSLT based on the Python 're' module,
  enabled by default, can be switched off with 'regexp=False' keyword argument

* Support for exslt extensions (libexslt) and node-set function

* Substantial speedup in XPath.evaluate()

* HTMLParser for parsing (broken) HTML

* XMLDTDID function parses XML into tuple (root node, ID dict) based on xml:id
  implementation of libxml2 (as opposed to ET compatible XMLID)

* Speedup for Element.makeelement(): the new element now reuses the original
  libxml2 document instead of creating a new empty one

* Speedup for reversed() iteration over element children (Py2.4+ only)

* ElementTree compatible QName class

* RelaxNG and XMLSchema now accept any Element, not only ElementTrees

Bugs fixed
----------

* Memory leak if write_c14n fails to write the file after conversion

* ElementTree.xpath() and XPathDocumentEvaluator were not using the
  ElementTree root node as reference point
