@@ -15,6 +15,8 @@ cdef extern from "Python.h":
 
     cdef object PyUnicode_FromEncodedObject(object s, char* encoding,
                                             char* errors)
+    cdef object PyUnicode_Decode(char* s, Py_ssize_t size,
+                                 char* encoding, char* errors)
     cdef object PyUnicode_DecodeUTF8(char* s, Py_ssize_t size, char* errors)
     cdef object PyUnicode_AsUTF8String(object ustring)
     cdef char* PyUnicode_AS_DATA(object ustring)
