@@ -7,6 +7,8 @@ current
 Features added
 --------------
 
+* Support for writing XSLT results to Python unicode strings via `unicode()`
+
 * Module level `tounicode` function to return XML serialization as Python
   unicode string (equivalent to `tostring` function)
 
@@ -55,6 +57,8 @@ Features added
 
 Bugs fixed
 ----------
+
+* str(xslt_result) was broken for output other than UTF-8
 
 * Memory leak if write_c14n fails to write the file after conversion
 
